# AIAA-5027-EgNeRF

./: .gitignore  pyproject.toml  run.py
egnerf/: egnerf_config.py  egnerf_datamanager.py  egnerf_dataparser.py  egnerf_model.py  utils.py
egnerf/scripts/: clean_raw_data.py  generate_blur_images.py  generate_event_frames.py
