[project]
name = "EgNeRF"
version = "0.1.0"

dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["egnerf*"]

[project.entry-points.'nerfstudio.method_configs']
egnerf = 'egnerf.egnerf_config:egnerf_method'

[project.entry-points.'nerfstudio.dataparser_configs'] 
egnerf-dataparser = 'my_method.my_config:MyDataparser'